# PGRe_examples

./: .gitignore
00_cmake/: CMakeLists.txt
00_cmake/src/: main.cpp
01_sdl/src/: main.cpp
02_gegl/: CMakeLists.txt
02_gegl/src/: main.cpp
03_vertexArrays/: CMakeLists.txt
03_vertexArrays/src/: main.cpp
04_matrices/: CMakeLists.txt
04_matrices/src/: main.cpp
05_textures/: CMakeLists.txt
05_textures/libs/: impl.cpp
05_textures/src/: main.cpp
06_phongLighting/: CMakeLists.txt
06_phongLighting/src/: main.cpp
07_models/: CMakeLists.txt
07_models/src/: main.cpp
